# shifted-ICCG-on-MATLAB

./: A_b.mat  Ab.mat  iccg.cpp  iccg.h  iccg_mex.cpp  iccg_mex.mexw64  sparse_to_csr.m  test_iccg.m
MATLAB/: README.md  compile_mex.m  iccg_mex.m  iccg_mex.mexw64  symmetric_sparse_to_csr.m  test_iccg.m
Matrix/: case01.m
Python/: MANIFEST.in  README_Python.md  demo_comparison.py  iccg_python.cpp  pyproject.toml  requirements.txt  setup.py  test_from_mat.py  test_iccg_python.py
Python/.claude/: settings.local.json
Python/iccg_solver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
