[build-system]
requires = [
    "setuptools>=45",
    "wheel",
    "pybind11>=2.6.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "iccg_solver"
version = "0.1.0"
description = "Incomplete Cholesky Conjugate Gradient solver for sparse symmetric positive definite matrices"
readme = "README_Python.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ICCG Development Team"},
]
keywords = ["sparse", "linear algebra", "conjugate gradient", "ICCG", "numerical methods"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/yourusername/iccg_solver"
Documentation = "https://github.com/yourusername/iccg_solver#readme"
Repository = "https://github.com/yourusername/iccg_solver"
Issues = "https://github.com/yourusername/iccg_solver/issues"

[tool.setuptools]
packages = []
py-modules = []

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]

[tool.cibuildwheel]
build = "cp3{7,8,9,10,11,12}-*"
skip = "*-musllinux_* *-win32 *-manylinux_i686"

[tool.cibuildwheel.linux]
before-all = "yum install -y gcc-c++"
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64", "universal2"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]